src/test/pass/import/test_deep_bottom.lly
define bottomFunc(i: integer => integer) { return i }
