src/test/fail/basic_syntax/return_without_value.lly
#[
SyntaxError: 'return' expression has no value.
Where: File "return_without_value.lly" at line 6
]#

define f() {  } define g( => integer) { return f() }
